[metadata]
name = ec2api-tempest-plugin
summary = Tempest plugin for ec2-api
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://opendev.org/openstack/ec2api-tempest-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    ec2api_tempest_plugin

[compile_catalog]
directory = ec2api_tempest_plugin/locale
domain = ec2api_tempest_plugin

[update_catalog]
domain = ec2api_tempest_plugin
output_dir = ec2api_tempest_plugin/locale
input_file = ec2api_tempest_plugin/locale/ec2api_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ec2api_tempest_plugin/locale/ec2api_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    aws_tests = ec2api_tempest_plugin.plugin:AWSTempestPlugin
